Add favicon and app icons to index.html
Added favicon and app icons links to the head section.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
     href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600;700&family=Inter:wght@300;400;500;600&display=swap"
     rel="stylesheet"
   >
+    <!-- Favicon & app icons -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <!-- Optional .ico fallback -->
+  <link rel="icon" href="/favicon.ico">
+  <meta name="theme-color" content="#050608">
+
 
   <style>
     :root {
